[tool.poetry]
name = "weacher"
version = "0.1.0"
description = "Weird Teacher"
authors = ["Fabin Meyer <mail.fabianmeyer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.1.301"
openai = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
